--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>The Hijab Brand</title>
+  <title>Moda Scarfs</title>
 
   <!-- GOOGLE FONTS -->
   <link href="https://fonts.googleapis.com/css?family=Montserrat:400,600,900|Nixie+One|Open+Sans&display=swap" rel="stylesheet">
@@ -32,7 +32,7 @@
       <!-- NAVBAR -->
       <nav class="navbar sticky-top navbar-expand-lg navbar-light bg-white">
 
-        <a class="navbar-brand">The Hijab Brand </a>
+        <a class="navbar-brand">Moda Scarfs </a>
 
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -212,7 +212,7 @@
       </div>
     </div>
 
-    <p>© Copyright 2020 The Hijab Brand</p>
+    <p>© Copyright 2020 Moda Scarfs</p>
 
   </footer>
 
